--- a/MyNotePad/View/Login.xaml
+++ b/MyNotePad/View/Login.xaml
@@ -1,15 +1,16 @@
 ﻿<UserControl
-    x:Class="MyNotePad.View.HomePage"
+    x:Class="MyNotePad.View.Login"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:MyNotePad.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400" Loaded="UserControl_Loaded">
 
     <Grid>
-        <TextBlock>Homepage</TextBlock>
-        <Button Click="Button_Click"></Button>
+        <TextBlock>login</TextBlock>
+        <Button Click="Button_Click">bbb</Button>
     </Grid>
 </UserControl>
